--- a/source/_posts/2011-11-13-clojure-conj-2011.markdown
+++ b/source/_posts/2011-11-13-clojure-conj-2011.markdown
@@ -9,6 +9,7 @@ categories:
 tags:
 - clojure
 - conference
+comments: true
 ---
 clojure/conj 2011 was announced around about when I was preparing to
 move to Chicago and right after 3 full on days of clojure training. A
